# VSLAM

./: .gitignore  LICENSE  README.md  list.txt
0.ProjectDemo/0.Linux_C_Demo/: helloSLAM  helloSLAM.cpp  readme.txt
0.ProjectDemo/1.CMake_Demo/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h  readme.txt  useHello.cpp
1.OpenCV/: CMakeLists.txt  opencvtest  opencvtest.cpp  readme.txt
10.3D-3D:ICP/: CMakeLists.txt  pose_estimation_3d3d.cpp  readme.txt  yu_pose_estimation_3d3d.cpp
11.LK光流/: readme.txt  useLK.cpp
11.lkdemo/: lkdemo  lkdemo.cpp  readme.txt
12.直接法directMethod/: direct_semidense.cpp  direct_sparse.cpp  readme.txt
13.前端project/0.1/buile/: CMakeCache.txt  Makefile  cmake_install.cmake
13.前端project/0.1/buile/src/: Makefile  cmake_install.cmake
13.前端project/0.1/buile/test/: Makefile  cmake_install.cmake
13.前端project/0.1/include/myslam/: common_include.h  frame.h  mappoint.h
13.前端project/0.1/src/: camera.cpp  frame.cpp  mappoint.cpp
13.前端project/0.2/: CMakeLists.txt
13.前端project/0.2/config/: default.yaml
13.前端project/0.2/include/myslam/: camera.h  common_include.h  config.h  map.h  mappoint.h  visual_odometry.h
13.前端project/0.2/src/: camera.cpp  config.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
13.前端project/0.2/test/: run_vo.cpp
13.前端project/0.3/: CMakeLists.txt  readme.txt
13.前端project/0.3/config/: default.yaml
13.前端project/0.3/include/myslam/: camera.h  common_include.h  map.h  mappoint.h  visual_odometry.h
13.前端project/0.3/src/: camera.cpp  config.cpp  frame.cpp  mappoint.cpp  visual_odometry.cpp
13.前端project/0.3/test/: run_vo.cpp
13.前端project/0.4/: readme.txt
13.前端project/0.4/config/: default.yaml
13.前端project/0.4/include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  mappoint.h  visual_odometry.h
13.前端project/0.4/src/: map.cpp  mappoint.cpp  visual_odometry.cpp
13.前端project/0.4/test/: run_vo.cpp
14.Ceres&g2o求解BA优化/ceres_custombundle/: ceresBundle.cpp  readme.txt
14.Ceres&g2o求解BA优化/ceres_custombundle/output/: final.ply
14.Ceres&g2o求解BA优化/g2o_custombundle/: g2o_bundle.cpp  readme.txt
15.g2o位姿图优化与gtsam因子图优化/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp  readme.txt
16.回环检测词袋模型LoopClosure/: feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp  readme.txt
16.回环检测词袋模型LoopClosure/data/data_focus_part/: 大字典结果.txt
16.回环检测词袋模型LoopClosure/data/data_focus_part1/: 大字典结果.txt
16.回环检测词袋模型LoopClosure/data/data_focus_part2/: 大字典结果.txt
16.回环检测词袋模型LoopClosure/data/data_tum/: 大字典结果.txt  小字典结果.txt
17.地图构建mapping-单目稠密重建-dense_monocular/: dense_mapping.cpp  readme.txt
18.地图构建mapping-RGBD稠密重建-dense_RGBD/: octomap_mapping.cpp  pointcloud_mapping.cpp  readme.txt
18.地图构建mapping-RGBD稠密重建-dense_RGBD-使用ICP里程计/: CMakeLists.txt  ICP_pointcloud_mapping.cpp  readme.txt
18.地图构建mapping-RGBD稠密重建-dense_RGBD-使用ICP里程计/data/: pose.txt  pose_icp.txt
19.yuSLAM/: CMakeLists.txt  readme.txt
19.yuSLAM/src/: yu_pose_estimation_3d3d.cpp
2.useSophus/: CMakeLists.txt  readme.txt  useSophus.cpp
3.三维空间刚体运动/transfer/: CMakeLists.txt  readme.txt
3.三维空间刚体运动/transfer/include/: eigenGeometryTransfer.h
3.三维空间刚体运动/transfer/src/: main.cpp
3.三维空间刚体运动/useEigen/: CMakeLists.txt  eigenMatrix_test.cpp  readme.txt
3.三维空间刚体运动/useGeometry/: CMakeLists.txt  eigenGeometry_test.cpp  readme.txt
3.三维空间刚体运动/visualizeGeometry/: readme.txt  visualizeGeometry.cpp
4.拼接点云/: CMakeLists.txt  joinMap.cpp  readme.txt  splitMap.cpp
5.非线性优化/ceres_curve_fitting/: CMakeLists.txt  OpenCVplt.h  main.cpp  my_cerestest.cpp  readme.txt  theme.h  theme_test.cpp
5.非线性优化/g2o_curve_fitting/: main.cpp  readme.txt
6.Images stitcher/: readme.txt  stitching  stitching.cpp
6.特征提取与匹配/: CMakeLists.txt  feature_extraction.cpp  readme.txt
7.2D-2D:对极几何/: CMakeLists.txt  pose_estimation_2d2d.cpp  readme.txt
8.三角测量/: CMakeLists.txt  readme.txt  triangulation.cpp
8.三角测量stereo_match_双目匹配获取深度图/: readme.txt  stereo_match  stereo_match.cpp
8.三角测量stereo_match_双目匹配获取深度图/stereoBM/: SBM_Sample.cpp  demo
9.3D-2D:PnP/: CMakeLists.txt  pose_estimation_3d2d.cpp  readme.txt
data/rgbd_dataset_freiburg1_desk/: readme.txt
tools/: associate.py
